[gd_scene load_steps=11 format=3 uid="uid://dfdene8in3gqi"]

[ext_resource type="Script" path="res://levels/dev/sublevel_test.gd" id="1_bw76o"]
[ext_resource type="PackedScene" uid="uid://bnacf6fsyyquf" path="res://levels/sub_level/sub_level.tscn" id="1_um6ye"]
[ext_resource type="PackedScene" uid="uid://eu51uk4ydnoe" path="res://overworld/player_overworld.tscn" id="4_s7y5g"]
[ext_resource type="Script" path="res://character/item.gd" id="5_1s61b"]
[ext_resource type="Resource" uid="uid://dm0p2hr7fdmlu" path="res://assets/items/health_potion.tres" id="6_3pyav"]
[ext_resource type="PackedScene" uid="uid://cu3y01etdq38t" path="res://objects/character/goblin_girl.tscn" id="7_vviek"]
[ext_resource type="Script" path="res://character/character.gd" id="8_nembj"]
[ext_resource type="Script" path="res://combat/attack.gd" id="9_xa7x7"]

[sub_resource type="Resource" id="Resource_b4t6v"]
script = ExtResource("8_nembj")
name = "Player"
strength = 5
dexterity = 1
intelligence = 0
perception = 1
endurance = 5
charisma = 0
items = Array[ExtResource("5_1s61b")]([ExtResource("6_3pyav")])
total_ap = 3
spells = Array[ExtResource("9_xa7x7")]([])
model_prefab = ExtResource("7_vviek")

[sub_resource type="BoxShape3D" id="BoxShape3D_fpvln"]
size = Vector3(31, 9, 57)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_bw76o")

[node name="SubLevel" parent="." instance=ExtResource("1_um6ye")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.5825, 0, 0)
level_path = "res://levels/sublevelloadtest.tscn"

[node name="SubLevel2" parent="." instance=ExtResource("1_um6ye")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 48.5825, 0, -35)
level_path = "res://levels/sublevelloadtest.tscn"

[node name="PlayerOverworld" parent="." instance=ExtResource("4_s7y5g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 1, 23)
character = SubResource("Resource_b4t6v")

[node name="Sublevel1Load" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 0, -8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sublevel1Load"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 19)
shape = SubResource("BoxShape3D_fpvln")

[node name="Sublevel1Load2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 0, -56)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sublevel1Load2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 10)
shape = SubResource("BoxShape3D_fpvln")

[connection signal="body_entered" from="Sublevel1Load" to="." method="_on_sublevel_1_load_body_entered"]
[connection signal="body_exited" from="Sublevel1Load" to="." method="_on_sublevel_1_load_body_exited"]
[connection signal="body_entered" from="Sublevel1Load2" to="." method="_on_sublevel_1_load_2_body_entered"]
[connection signal="body_exited" from="Sublevel1Load2" to="." method="_on_sublevel_1_load_2_body_exited"]
